--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dist": "sh ./scripts/build.sh",
     "server": "tsc-watch --outDir ./build --onSuccess \"npm run start -- --mode=http\" --onFailure \"echo ERROR! Compilation Failed\""
   },
-  "author": "Arpit Nakarani",
+  "author": "Pramit Mangukiya",
   "license": "ISC",
   "dependencies": {
     "@types/body-parser": "^1.19.2",
